--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "weather-app-reactjs",
+  "homepage": "https://adhikarilaxman.github.io/Weather-App/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
